<resources>
    <string name="app_name">WiFi Auto Disable</string>
    <string name="xposed_desc">Automatically disables WiFi when signal is weaker than a set threshold</string>
    <string name="module_not_activated">Module Not Activated</string>
    <string name="module_is_activated">Module Activated</string>
    <string name="pref_enable_title">Enable Module</string>
    <string name="pref_threshold_title">Signal Threshold</string>
    <string name="pref_threshold_desc">Disconnect WiFi when signal is weaker than:</string>
    <string name="threshold_value">%d dBm</string>
    <string name="current_rssi">Current WiFi signal: %d dBm</string>
    <string name="wifi_not_connected">WiFi not connected</string>
    <string name="pref_cooldown_title">Disconnect Cooldown</string>
    <string name="pref_cooldown_desc">Minimum time between disconnects:</string>
    <string name="cooldown_value">%d min</string>
    <string name="cooldown_note">Cooldown prevents rapid toggling when signal is unstable</string>
    <string name="reboot_note">Changes take effect after reboot</string>
    <string name="pref_auto_reconnect_title">Auto Reconnect</string>
    <string name="pref_language_title">Language</string>
</resources>
